# deepbee-source

src/DeepBee/software/: train.py
src/data/: download_dataset_train.py
src/data/download_many_files/: Cargo.toml
src/data/download_many_files/src/: main.rs
