[package]
name = "download_many_files"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
csv = "1.3.0"
futures = "0.3.28"
futures-util = "0.3.28"
indicatif = "0.17.7"
reqwest = { version = "0.11.22", features = ["stream"] }
tokio = { version = "1.33.0", features = ["full"] }
